--- a/.github/workflows/build-on-commit.yml
+++ b/.github/workflows/build-on-commit.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
 
 jobs:
-  check:
+  build-desktop:
     runs-on: ubuntu-22.04
     permissions:
       id-token: "write"
@@ -15,5 +15,31 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: DeterminateSystems/flake-checker-action@main
-      - name: Run `nix build`
+      - name: Build NixOS Desktop
+        run: nix build .#nixosConfigurations.NixOSDesktop.config.system.build.toplevel --accept-flake-config
+
+  build-laptop:
+    runs-on: ubuntu-22.04
+    permissions:
+      id-token: "write"
+      contents: "read"
+    steps:
+      - uses: actions/checkout@v4
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - uses: DeterminateSystems/flake-checker-action@main
+      - name: Build NixOS Laptop
+        run: nix build .#nixosConfigurations.NixOSLaptop.config.system.build.toplevel --accept-flake-config
+
+  build-server:
+    runs-on: ubuntu-22.04
+    permissions:
+      id-token: "write"
+      contents: "read"
+    steps:
+      - uses: actions/checkout@v4
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - uses: DeterminateSystems/flake-checker-action@main
+      - name: Build NixOS Server
         run: nix build .#nixosConfigurations.NixOSServer.config.system.build.toplevel --accept-flake-config
