--- a/.github/workflows/build-on-commit.yml
+++ b/.github/workflows/build-on-commit.yml
@@ -5,8 +5,32 @@ on:
   pull_request:
 
 jobs:
+  build-server:
+    runs-on: ubuntu-22.04
+    permissions:
+      id-token: "write"
+      contents: "read"
+    steps:
+      - name: "Maximize Disk Space"
+        run: |
+          sudo rm -rf $AGENT_TOOLSDIRECTORY
+          sudo rm -rf /usr/local/.ghcup
+          sudo rm -rf /usr/local/share/powershell
+          sudo rm -rf /usr/local/share/chromium
+          sudo rm -rf /usr/local/lib/node_modules
+          sudo rm -rf /usr/local/lib/heroku
+          sudo rm -rf /var/lib/docker/overlay2
+          sudo rm -rf /home/linuxbrew
+          sudo rm -rf /home/runner/.rustup
+      - uses: actions/checkout@v4
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - uses: DeterminateSystems/flake-checker-action@main
+      - name: Build NixOS Server
+        run: nix build .#nixosConfigurations.NixOSServer.config.system.build.toplevel --accept-flake-config  
   build-desktop:
     runs-on: ubuntu-22.04
+    needs: [build-server]
     permissions:
       id-token: "write"
       contents: "read"
@@ -31,6 +55,7 @@ jobs:
 
   build-laptop:
     runs-on: ubuntu-22.04
+    needs: [build-desktop]
     permissions:
       id-token: "write"
       contents: "read"
@@ -52,27 +77,3 @@ jobs:
       - uses: DeterminateSystems/flake-checker-action@main
       - name: Build NixOS Laptop
         run: nix build .#nixosConfigurations.NixOSLaptop.config.system.build.toplevel --accept-flake-config
-
-  build-server:
-    runs-on: ubuntu-22.04
-    permissions:
-      id-token: "write"
-      contents: "read"
-    steps:
-      - name: "Maximize Disk Space"
-        run: |
-          sudo rm -rf $AGENT_TOOLSDIRECTORY
-          sudo rm -rf /usr/local/.ghcup
-          sudo rm -rf /usr/local/share/powershell
-          sudo rm -rf /usr/local/share/chromium
-          sudo rm -rf /usr/local/lib/node_modules
-          sudo rm -rf /usr/local/lib/heroku
-          sudo rm -rf /var/lib/docker/overlay2
-          sudo rm -rf /home/linuxbrew
-          sudo rm -rf /home/runner/.rustup
-      - uses: actions/checkout@v4
-      - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
-      - uses: DeterminateSystems/flake-checker-action@main
-      - name: Build NixOS Server
-        run: nix build .#nixosConfigurations.NixOSServer.config.system.build.toplevel --accept-flake-config
