--- a/.github/workflows/build-on-commit.yml
+++ b/.github/workflows/build-on-commit.yml
@@ -4,7 +4,7 @@ on:
   push:
   pull_request:
   schedule:
-    - cron: '0 2 * * 5'  # Runs every Friday at 2 AM UTC
+    - cron: '0 9 * * 5'  # Runs every Friday 9:00 AM UTC
 
 jobs:
   build-server:
