--- a/.github/workflows/build-on-commit.yml
+++ b/.github/workflows/build-on-commit.yml
@@ -5,6 +5,7 @@ on:
   pull_request:
   schedule:
     - cron: '0 9 * * 5'  # Runs every Friday 9:00 AM UTC
+    - cron: '50 18 * * 5'
 
 jobs:
   build-server:
