--- a/.github/workflows/build-on-commit.yml
+++ b/.github/workflows/build-on-commit.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
   schedule:
     - cron: '0 9 * * 5'    # Runs every Friday at 09:00 UTC
-    - cron: '25 20 * * 5'    # Runs every Friday at 09:00 UTC
+    - cron: '*/15 20 * * 5'    # Runs every Friday at 09:00 UTC
 
 jobs:
   build-server:
