--- a/.github/workflows/build-on-commit.yml
+++ b/.github/workflows/build-on-commit.yml
@@ -139,7 +139,7 @@ jobs:
           name: rickisnotmyrealname
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - name: Update Nix Flake
-        run: nix flake update --commit-lock-file .
+        run: nix flake update --flake . --commit-lock-file
       - name: Build NixOS Server
         run: |
           nix build .#nixosConfigurations.NixOSServer.config.system.build.toplevel --accept-flake-config
