--- a/.github/workflows/build-on-commit.yml
+++ b/.github/workflows/build-on-commit.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build-server:
-    if: ${{ github.event_name != 'schedule' }}
+    if: ${{ github.event_name == 'push' || github.event_name == 'pull_request' }}
     runs-on: ubuntu-22.04
     permissions:
       id-token: "write"
@@ -40,7 +40,7 @@ jobs:
           nix build .#nixosConfigurations.NixOSServer.config.system.build.toplevel --accept-flake-config
 
   build-laptop:
-    if: ${{ github.event_name != 'schedule' }}
+    if: ${{ github.event_name == 'push' || github.event_name == 'pull_request' }}
     runs-on: ubuntu-22.04
     needs: [build-server]
     permissions:
@@ -72,7 +72,7 @@ jobs:
           nix build .#nixosConfigurations.NixOSLaptop.config.system.build.toplevel --accept-flake-config      
 
   build-desktop:
-    if: ${{ github.event_name != 'schedule' }}
+    if: ${{ github.event_name == 'push' || github.event_name == 'pull_request' }}
     runs-on: ubuntu-22.04
     needs: [build-laptop]
     permissions:
