--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -20,7 +20,7 @@ jobs:
       contents: read
     steps:
       - name: Free Disk Space (Ubuntu)
-        uses: jlumbroso/free-disk-space@main
+        uses: Jayllyz/free-disk-space@refs/heads/perf/use-rmz
         with:
           tool-cache: true
           android: true
