--- a/.github/workflows/update-flake.yml
+++ b/.github/workflows/update-flake.yml
@@ -23,7 +23,7 @@ jobs:
       contents: write
     steps:
       - name: Free Disk Space (Ubuntu)
-        uses: jlumbroso/free-disk-space@main
+        uses: Jayllyz/free-disk-space@refs/heads/perf/use-rmz
         with:
           tool-cache: true
           android: true
