--- a/.github/workflows/build-systems.yml
+++ b/.github/workflows/build-systems.yml
@@ -5,6 +5,7 @@
 # NixOSWireguardServer
 # NixOSTraefikServer
 # NixOSAuthServer
+# NixOSNextcloudServer
 # NixOSServer
 # NixOSLaptop
 # NixOSDesktop
@@ -61,6 +62,14 @@ jobs:
     with:
       build_command: |
         nix build .#nixosConfigurations.NixOSAuthServer.config.system.build.toplevel --accept-flake-config
+    secrets:
+      CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
+  build-nextcloud-server:
+    needs: build-base_container
+    uses: ./.github/workflows/reusable-build.yml
+    with:
+      build_command: |
+        nix build .#nixosConfigurations.NixOSNextcloudServer.config.system.build.toplevel --accept-flake-config
     secrets:
       CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
   build-server:
